--- a/package.json
+++ b/package.json
@@ -11,8 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-sqlite": "^0.0.1",
+    "connect-sqlite3": "^0.9.13",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "stripe": "^14.17.0"
   }
 }
